--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,4 +4,4 @@ spring.datasource.password=password
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-jwt.secret=testtest
+jwt.token.secret=testtest
