--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    mavenLocal()
     maven {
         name = "GitHubPackages"
         url = 'https://maven.pkg.github.com/chimerax/common-service'
@@ -39,14 +40,12 @@ ext {
 }
 
 dependencies {
-    compile 'io.jsonwebtoken:jjwt:0.9.1'
-    compile 'javax.xml.bind:jaxb-api:2.3.1'
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    implementation 'org.chimerax:common-service:1.0.2-RELEASE'
+    implementation 'org.chimerax:common-service:1.3.0-RELEASE'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
