--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,4 +3,6 @@ spring.datasource.url=${POSTGRES_DATABASE_URL}
 spring.datasource.username=${POSTGRES_DATABASE_USERNAME}
 spring.datasource.password=${POSTGRES_DATABASE_PASSWORD}
 spring.jpa.generate-ddl=true
-jwt.token.secret=${JWT_SECRET}
+jwt.token.validity=${JWT_TOKEN_VALIDITY}
+jwt.token.issuer=${JWT_TOKEN_ISSUER}
+
