--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -64,4 +64,4 @@ jobs:
         gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $GKE_PROJECT
         ./kustomize edit set image $REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE=$REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:${GITHUB_SHA}
         ./kustomize build . | kubectl apply -f -
-        kubectl create deployment -f deployment.yaml
+        kubectl create deployments -f deployment.yaml
