--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,13 @@
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=${POSTGRES_DATABASE_URL}
-spring.datasource.username=${POSTGRES_DATABASE_USERNAME}
-spring.datasource.password=${POSTGRES_DATABASE_PASSWORD}
+spring.datasource.url=jdbc:${DATABASE_DRIVER}://${DATABASE_HOST}:${DATABASE_PORT}/hades
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.generate-ddl=true
+
 jwt.token.validity=${JWT_TOKEN_VALIDITY}
 jwt.token.issuer=${JWT_TOKEN_ISSUER}
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
 
