--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:${DATABASE_DRIVER}://${DATABASE_HOST}:${DATABASE_PORT}/hades
+spring.datasource.url=jdbc:${DATABASE_DRIVER}://${DATABASE_HOST}:${DATABASE_PORT}/prometheus
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.generate-ddl=true
