--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,7 +7,9 @@ spring.jpa.generate-ddl=true
 jwt.token.validity=${JWT_TOKEN_VALIDITY}
 jwt.token.issuer=${JWT_TOKEN_ISSUER}
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=${EUREKA_SERVER_URL}
+
 
 
