--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,6 +10,7 @@ jwt.token.issuer=${JWT_TOKEN_ISSUER}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=${EUREKA_SERVER_URL}
+eureka.instance.prefer-ip-address=true
 
 
 
